# contract-generator

./: .gitignore  README.md  generate_contract.py  pyproject.toml
contract_generator/: __init__.py  cli.py  render_pdf.py  schema.py  template_registry.py
contract_generator/template_support/: __init__.py  types.py  utils.py
contract_generator/templates/: __init__.py  model_release.py  model_release.yml  video_release.py
examples/: model_release.yml
tests/: test_cli.py  test_pdf_fields.py
